--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -9,5 +9,6 @@ vim
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+RUN docker-php-ext-install pdo  pdo_mysql
 
 WORKDIR /var/www
